--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -21,7 +21,17 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install setuptools wheel pyinstaller
+
+      - name: Build binary with PyInstaller
+        run: |
+          pyinstaller --onefile calculator.py
 
       - name: Build project
         run: |
