--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -53,7 +53,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: main/calculator
+          asset_path: main/calculator.py
           asset_name: calculator
           asset_content_type: application/octet-stream
   
